# Chessboard

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Game.cpp  Game.h
src/Chessboard/: Board.cpp  Board.h  Constants.h  Move.h  Piece.h  Position.h  Square.h
src/Chessboard/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/GameLogic/: Game.cpp  Game.h  GameEngine.cpp  GameEngine.h
src/Parser/: MovesParser.cpp  MovesParser.h  ParsingException.cpp  ParsingException.h
src/SimpleUI/: ChessboardConsolePresenter.cpp  ChessboardConsolePresenter.h
